# mlflow_prod

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/api/: Dockerfile  main.py
src/front/: Dockerfile  app.py
src/train/: prepare_storage.py  train.py  train2.py
