[project]
name = "leflowduml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.68",
    "mlflow>=2.12.0",
    "pandas>=2.3.3",
    "protobuf>=4.21.0,<5.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.55.0",
]
